# quant-fund-lab

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  启动量化.command
app/: main.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/routes/: BacktestPage.tsx  DashboardPage.tsx  DataCenterPage.tsx  LoadingState.tsx  ReportsPage.tsx  (+7 more)
configs/: universe.yml
docs/: CODEX_UI_EXECUTION.md  QUANT_LAB_PRODUCT_DEV_SPEC.md  当前功能与开发工作说明.md  网页版协同决策记录.md
notebooks/: README.md
reports/: 量化.md
src/quant_fund_lab/: __init__.py
src/quant_fund_lab/backtest/: rotation_bt.py
src/quant_fund_lab/config/: settings.py
src/quant_fund_lab/data/: akshare_loader.py  download_sample.py
src/quant_fund_lab/features/: momentum.py
src/quant_fund_lab/market/: __init__.py
src/quant_fund_lab/simulate/: __init__.py  daily_signal.py
src/quant_fund_lab/strategies/: __init__.py
src/quant_fund_lab/ui/: __init__.py  config.py  launcher.py  state.py  streamlit_app.py
src/quant_fund_lab/utils/: exceptions.py
src/quant_lab/: __init__.py  launcher.py
src/quant_lab/api/: __init__.py  launcher.py  main.py
src/quant_lab/schemas/: __init__.py  response.py
src/quant_lab/services/: __init__.py  demo_data_service.py  real_data_service.py
strategies/: ma_cross.py  rsi_reversal.py
tests/: conftest.py  test_backtest_engine.py  test_data_storage.py  test_indicators.py  test_quant_lab_api.py  test_strategy_loader.py  test_ui_market_data_service.py  test_ui_report_service.py  test_ui_services.py  test_yfinance_provider.py
(+90 files in other folders)
