[project]
name = "quant-fund-lab"
version = "0.1.0"
description = "Local quant research lab for index funds and sector ETFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "backtrader>=1.9.78.123",
    "bt>=1.2.0",
    "duckdb>=1.5.4",
    "fastapi>=0.138.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "quantstats>=0.0.81",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "tqdm>=4.68.3",
    "yfinance>=1.4.1",
]

[project.scripts]
qfl-data = "quant_fund_lab.data.download_sample:main"
qfl-demo-data = "quant_fund_lab.data.download_sample:demo_main"
qfl-backtest = "quant_fund_lab.backtest.rotation_bt:main"
qfl-signal = "quant_fund_lab.simulate.daily_signal:main"
qfl-market-demo = "quant_fund_lab.market.services.backtest_service:main"
qfl-ui = "quant_fund_lab.ui.launcher:main"
quant-lab-api = "quant_lab.api.launcher:main"
quant-lab = "quant_lab.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
